--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,5 @@
 $colorh2: #4579da;
+$colorfondo: #a3a3a3;
 
 @mixin desPagina {
     margin: 50px 20%;
@@ -12,3 +13,4 @@ $colorh2: #4579da;
     border:solid 5px;
     border-color: darkslategray;
 }
+
