--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 @import "variables";
 
 #descripDePagina{   
@@ -48,4 +53,12 @@
     }
 }
 
+footer{
+    background-color: $colorfondo;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-content: space-around;
 
+}
