--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,9 @@
 }
 @import "variables";
 
+
+/*estilo pagina de contactos*/
+
 #descripDePagina{   
     #formularioContacto{
         form{
@@ -28,28 +31,47 @@
     }
 }
 
+
+/* estilos pagina de servicios*/
+
 #pagServicios{
     section{
         @include desPagina;
-        display: grid;
-        grid-template-areas: 
-        "p p p"
-        "div div h2"
-        "input input input";
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: auto auto auto;
 
         h2 {
             color: $colorh2;
+            font-size: xx-large;
+            padding: 15px;
         }
-        
+
         div{
-            img{
-                height: auto;
-                width: 100%;
-            }
-        }
+
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: center;
+            gap: 10px;
+            
+            div {
+
+                img{
+                    max-width: 300px;
+                    height: auto;
+                    
+                }
+            } 
+        }  
+
+        input{
+            @include boton;
+            position: relative;
+            left: 50%;
+            bottom: 40px;
+            
+        }  
         
+        p{
+            font-family: $fuenteParrafo;
+        }
     }
 }
 
@@ -60,5 +82,5 @@ footer{
     justify-content: space-around;
     flex-wrap: wrap;
     align-content: space-around;
-
+    bottom: 100%;
 }
