--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,16 @@
+@import "variables";
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-@import "variables";
+
+body{
+    display:flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
 
 /*estilo pagina de contactos*/
@@ -20,6 +27,10 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+
+                input{
+                    height: 25px;
+                }
             }
 
             #consulta{
@@ -31,6 +42,9 @@
     }
 }
 
+#ubicacion{
+    margin-top: auto;
+}
 
 /* estilos pagina de servicios*/
 
@@ -45,16 +59,17 @@
         }
 
         div{
-
             display: flex;
             flex-direction: row-reverse;
             align-items: center;
             gap: 10px;
             
             div {
-
+                /*max-width: 100%;*/
+                width: 500px;
+                height: 300px;
                 img{
-                    max-width: 300px;
+                    max-width: 100%;
                     height: auto;
                     
                 }
@@ -77,10 +92,19 @@
 
 footer{
     background-color: $colorfondo;
-    height: 50px;
+    width: 100%;
+    height: 75px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
     align-content: space-around;
-    bottom: 100%;
+    margin-top: auto;
+    gap: 15px;
+
+    a{
+        svg{
+            color: darkslategray;
+        }
+    }
+    
 }
