--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,10 +37,42 @@ body{
                 flex-direction: column;
                 flex-wrap: wrap;
             }
+
+            #botones{
+                input{
+                    padding: 3px 13px;
+                    border-radius: 3px; 
+                }
+                
+            }
         }    
     }
 }
 
+@media (max-width: $desktop) {
+    #descripDePagina{
+        margin: 50px 10%;
+        border:solid 5px;
+        border-color: darkslategray;
+        padding: 2%;
+        background-color: #a3a3a3;  
+    }   
+}
+
+@media (max-width: $tablet) {
+    #descripDePagina{
+       margin: 50px 5%; 
+    }
+    
+}
+
+@media (max-width: $tablet) {
+    #descripDePagina{
+        #formularioContacto{
+            display: block;
+        }
+    }
+}
 #ubicacion{
     margin-top: auto;
 }
